<resources>
    <string name="app_name">Viaggio</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="newaccount">Creat new Account,Register</string>
    <string name="Register">Register</string>
    <string name="TripName">Trip Name</string>
    <string name="EnterName">Enter Name</string>
    <string name="StartPoint">Start Point</string>
    <string name="Search">Search</string>
    <string name="endPoint">End Point</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="TripDirection">Trip Direction</string>
    <string name="EnterNote">Enter Note..</string>
    <string name="Add">Add</string>
    <string name="OneDirection">One Direction</string>
    <string name="Round">Round</string>
    <string name="showDetails">Show Details</string>
    <string name="Start">Start</string>
    <string name="title_activity_basic_home">BasicHome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home_basic">HomeBasic</string>
    <string name="AddNewTrip">Add New Trip</string>
    <string name="place_api_key">AIzaSyD9JKL035C0nhWcj15QHFmGYUO87-XM-BU</string>
    <string name="Sync">Sync</string>
    <string name="snooze_btn">Snooze</string>
    <string name="start_btn">Start</string>
    <string name="Home">Home</string>
    <string name="History">History</string>
    <string name="newStartPoint">Start Point :</string>
    <string name="newEndPoint">End Point :</string>
    <string name="newDateee">Date</string>
    <string name="newDate">Date :</string>
    <string name="newTime">Time :</string>
    <string name="TripDir">Trip Direction :</string>
    <string name="Save">Save</string>
    <string name="notes">Notes :</string>
    <string name="showNotes">Reda</string>
    <string name="map_key" translatable="false">AIzaSyB_XP9LpfV8mPGBvDd1BbnGdhuc25Obq48</string>
    
    <string name="upcoming">UpComing Trips</string>
    <string name="Note">Note</string>
    <string name="editTrip">Edit Trip</string>
    <string name="details">Trip Details</string>
    <string name="history">History</string>
    <string name="RoundTrip"> Add Round Trip</string>

</resources>
