<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.AddNewTrip">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#85FFB300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/common_google_signin_btn_text_light_pressed"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:logo="@color/common_google_signin_btn_text_dark_disabled"
                app:title="Add Trip"
                app:titleTextColor="#A1B68A" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/TripName"
                android:textColor="#0E0E0E"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tripName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/EnterName"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/seprator__"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/startPoint"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/StartPoint"
                android:textColor="#090909"
                android:textSize="20sp" />

            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/separator__"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/endPoint"
                android:textColor="#1B1A1A"
                android:textSize="20sp" />

            <fragment
                android:id="@+id/autocomplete_fragment_end"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/seprator__2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="615dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Date"
                        android:textColor="#151515"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/Time"
                        android:textColor="#070707"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="22-4-2019"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/TimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="22:00"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/calenderBtn"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/calendar_icon" />

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/alaramBtn"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:drawable/ic_menu_recent_history" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/TripDirection"
                    android:textColor="#0B0A0A"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <RadioButton
                        android:id="@+id/oneDirection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/OneDirection" />

                    <RadioButton
                        android:id="@+id/roundBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Round" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Notes"
                    android:textColor="#0E0E0E"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/NotesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/EnterNote"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/AddBtn"
                    android:layout_width="299dp"
                    android:layout_height="wrap_content"
                    android:background="#101010"
                    android:text="@string/Add"
                    android:textColor="#A1B68A" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
