<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.AddNewTrip">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/quantum_orange50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/quantum_orange50"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:text="@string/TripName"
                android:textColor="#D85C01"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tripName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/EnterName"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/startPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_asterisk_26__1_"
                    android:gravity="center|start"
                    android:text="@string/newStartPoint"
                    android:textColor="#D85C01"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editStartPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="#0B0A0A"
                    android:textSize="18sp" />


            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_asterisk_26__1_"
                    android:gravity="center_horizontal|left|center_vertical"
                    android:text="@string/newEndPoint"
                    android:textColor="#D85C01"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editEndPoint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#090808"
                    android:textSize="18sp" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <fragment
                android:id="@+id/autocomplete_fragment_end"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_asterisk_26__1_"
                    android:gravity="clip_horizontal|center|center_horizontal|left"
                    android:text="@string/newDate"
                    android:textColor="#D85C01"
                    android:textColorHighlight="#D85C01"
                    android:textColorHint="#D85C01"
                    android:textColorLink="#D85C01"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:textColor="#0B0A0A"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/calenderBtn"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:drawableStart="@drawable/calendar_icon" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_asterisk_26__1_"
                    android:gravity="center|left"
                    android:text="@string/newTime"
                    android:textColor="#D85C01"
                    android:textColorHighlight="#D85C01"
                    android:textColorHint="#D85C01"
                    android:textColorLink="#D85C01"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TimeText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:textColor="#121111"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/alaramBtn"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/icons8_alarm_clock_50" />
            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icons8_asterisk_26__1_"
                    android:gravity="center|center_horizontal|left|center_vertical"
                    android:text="@string/TripDir"
                    android:textColor="#D85C01"
                    android:textColorHighlight="#D85C01"
                    android:textColorHint="#D85C01"
                    android:textColorLink="#D85C01"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editTripDir"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textSize="18sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <RadioButton
                    android:id="@+id/oneDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OneDirection"
                    android:textColorHighlight="#D85C01"
                    android:textColorHint="#D85C01"
                    android:textColorLink="#D85C01" />

                <RadioButton
                    android:id="@+id/roundBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Round" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Notes"
                android:textColor="#D85C01"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/NotesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/EnterNote"
                android:inputType="textMultiLine" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/AddBtn"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:background="#D85C01"
                android:text="@string/Save"
                android:textColor="#FFF1D9" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
